[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Animation Effects/spark_06_rotated.png" type="Texture" id=1]
[ext_resource path="res://Assets/Animation Effects/spark_01.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Laser.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/AbilitySound/Laser.ogg" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment(){
	vec2 uv = vec2(UV.x - sin(TIME * 80.0) * 0.1, UV.y - sin(TIME * 50.0) * 0.02);
	COLOR = texture(TEXTURE, uv);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.y += sin(TIME * 80.0) * 200.0 * (UV.x - 1.0);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[node name="Laser" type="RigidBody2D"]
collision_mask = 3
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 12, 2, 3, 1 )
material = SubResource( 2 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 150.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 1

[node name="end" type="Node2D" parent="."]
modulate = Color( 12, 2, 3, 1 )
position = Vector2( 86.346, 0 )

[node name="Sprite" type="Sprite" parent="end"]
material = SubResource( 4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="end"]
material = SubResource( 4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
flip_v = true

[node name="front" type="Node2D" parent="."]
modulate = Color( 12, 2, 3, 1 )

[node name="Sprite" type="Sprite" parent="front"]
material = SubResource( 4 )
scale = Vector2( 0.05, 0.08 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="front"]
material = SubResource( 4 )
scale = Vector2( 0.05, 0.08 )
texture = ExtResource( 2 )
flip_v = true

[node name="Damager" type="Area2D" parent="." groups=["HellBeast_Damager"]]
position = Vector2( -25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damager"]
position = Vector2( 86, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50, 0 )
shape = SubResource( 6 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Aiming_area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Aiming_area"]
position = Vector2( 486.25, 0 )
scale = Vector2( 38.4375, 15.125 )
polygon = PoolVector2Array( -10, -10, 50, -50, 50, 50, -10, 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="area_entered" from="Damager" to="." method="_on_Damager_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Aiming_area" to="." method="_on_Aiming_area_body_entered"]
